Thu Nov 14 20:00:55 UTC 2024
a/kernel-firmware-20241113_6e4e94b-noarch-1.txz:  Upgraded.
a/kernel-generic-6.11.8-x86_64-1.txz:  Upgraded.
ap/alsa-utils-1.2.13-x86_64-3.txz:  Rebuilt.
  [PATCH] alsactl: 90-alsa-restore.rules - fix alsa_restore_go/std.
d/kernel-headers-6.11.8-x86-1.txz:  Upgraded.
d/luajit-2.1.1731601260-x86_64-1.txz:  Upgraded.
k/kernel-source-6.11.8-noarch-1.txz:  Upgraded.
kde/pulseaudio-qt-1.6.1-x86_64-1.txz:  Upgraded.
x/mesa-24.2.7-x86_64-1.txz:  Upgraded.
x/util-macros-1.20.2-noarch-1.txz:  Upgraded.
x/xlogo-1.0.7-x86_64-1.txz:  Upgraded.
x/xprop-1.2.8-x86_64-1.txz:  Upgraded.
isolinux/initrd.img:  Rebuilt.
kernels/*:  Upgraded.
usb-and-pxe-installers/usbboot.img:  Rebuilt.
+--------------------------+
Wed Nov 13 20:22:00 UTC 2024
ap/alsa-utils-1.2.13-x86_64-2.txz:  Rebuilt.
  Revert 90-alsa-restore.rules due to a missing label.
  Thanks to elcore.
ap/sudo-1.9.16p1-x86_64-1.txz:  Upgraded.
d/python-setuptools-75.5.0-x86_64-1.txz:  Upgraded.
kde/plasma-workspace-5.27.11.1-x86_64-4.txz:  Rebuilt.
  [PATCH] lookandfeel: Explicitly set theme to Breeze in defaults.
  Thanks to gmgf.
l/libxml2-2.13.5-x86_64-1.txz:  Upgraded.
l/python-hatchling-1.26.3-x86_64-1.txz:  Upgraded.
l/python-sphinx_rtd_theme-3.0.2-x86_64-1.txz:  Upgraded.
n/fetchmail-6.5.1-x86_64-1.txz:  Upgraded.
n/npth-1.8-x86_64-1.txz:  Upgraded.
x/xcompmgr-1.1.10-x86_64-1.txz:  Upgraded.
+--------------------------+
Tue Nov 12 20:26:19 UTC 2024
ap/alsa-utils-1.2.13-x86_64-1.txz:  Upgraded.
ap/diffstat-1.67-x86_64-1.txz:  Upgraded.
d/python-setuptools-75.4.0-x86_64-1.txz:  Upgraded.
l/alsa-lib-1.2.13-x86_64-1.txz:  Upgraded.
l/libcap-2.72-x86_64-1.txz:  Upgraded.
l/python-hatchling-1.26.2-x86_64-1.txz:  Upgraded.
xap/mozilla-thunderbird-128.4.3esr-x86_64-1.txz:  Upgraded.
  This release contains security fixes and improvements.
  For more information, see:
    https://www.mozilla.org/en-US/thunderbird/128.4.3esr/releasenotes/
  (* Security fix *)
+--------------------------+