@@ -1,20 +1,20 @@
-Thu Nov 14 20:04:58 UTC 2024
+Fri Nov 15 21:39:31 UTC 2024
 
 Here is the file list for this directory.  If you are using a 
 mirror site and find missing or extra files in the disk 
 subdirectories, please have the archive administrator refresh
 the mirror.
 
-drwxr-xr-x 12 root root      4096 2024-11-14 20:00 .
+drwxr-xr-x 12 root root      4096 2024-11-15 21:35 .
 -rw-r--r--  1 root root      5767 2022-02-02 22:44 ./ANNOUNCE.15.0
 -rw-r--r--  1 root root     16617 2022-02-02 23:27 ./CHANGES_AND_HINTS.TXT
--rw-r--r--  1 root root   1159160 2024-11-13 20:27 ./CHECKSUMS.md5
--rw-r--r--  1 root root       195 2024-11-13 20:27 ./CHECKSUMS.md5.asc
+-rw-r--r--  1 root root   1159169 2024-11-14 20:05 ./CHECKSUMS.md5
+-rw-r--r--  1 root root       195 2024-11-14 20:05 ./CHECKSUMS.md5.asc
 -rw-r--r--  1 root root     17976 1994-06-10 02:28 ./COPYING
 -rw-r--r--  1 root root     35147 2007-06-30 04:21 ./COPYING3
 -rw-r--r--  1 root root     19573 2016-06-23 20:08 ./COPYRIGHT.TXT
 -rw-r--r--  1 root root       616 2006-10-02 04:37 ./CRYPTO_NOTICE.TXT
--rw-r--r--  1 root root   1231629 2024-11-14 20:00 ./ChangeLog.txt
+-rw-r--r--  1 root root   1231855 2024-11-15 21:35 ./ChangeLog.txt
 drwxr-xr-x  3 root root      4096 2013-03-20 22:17 ./EFI
 drwxr-xr-x  2 root root      4096 2024-11-14 20:00 ./EFI/BOOT
 -rw-r--r--  1 root root   1200128 2024-09-12 20:40 ./EFI/BOOT/bootx64.efi
@@ -25,9 +25,9 @@ drwxr-xr-x  2 root root      4096 2024-11-14 20:00 ./EFI/BOOT
 -rwxr-xr-x  1 root root      2504 2019-07-05 18:54 ./EFI/BOOT/make-grub.sh
 -rw-r--r--  1 root root     10722 2013-09-21 19:02 ./EFI/BOOT/osdetect.cfg
 -rw-r--r--  1 root root      1273 2013-08-12 21:08 ./EFI/BOOT/tools.cfg
--rw-r--r--  1 root root   1520322 2024-11-13 20:26 ./FILELIST.TXT
+-rw-r--r--  1 root root   1520331 2024-11-14 20:04 ./FILELIST.TXT
 -rw-r--r--  1 root root      1572 2012-08-29 18:27 ./GPG-KEY
--rw-r--r--  1 root root    913806 2024-11-14 20:04 ./PACKAGES.TXT
+-rw-r--r--  1 root root    913808 2024-11-15 21:38 ./PACKAGES.TXT
 -rw-r--r--  1 root root      8034 2022-02-02 03:36 ./README.TXT
 -rw-r--r--  1 root root      2640 2024-11-14 19:43 ./README.initrd
 -rw-r--r--  1 root root     34114 2023-12-11 20:35 ./README_CRYPT.TXT
@@ -662,11 +662,11 @@ drwxr-xr-x  2 root root      4096 2022-02-03 07:02 ./patches
 -rw-r--r--  1 root root       575 2022-02-03 07:02 ./patches/FILE_LIST
 -rw-r--r--  1 root root        14 2022-02-03 07:02 ./patches/MANIFEST.bz2
 -rw-r--r--  1 root root       224 2022-02-03 07:02 ./patches/PACKAGES.TXT
-drwxr-xr-x 17 root root      4096 2024-11-14 20:04 ./slackware64
--rw-r--r--  1 root root    356671 2024-11-14 20:04 ./slackware64/CHECKSUMS.md5
--rw-r--r--  1 root root       195 2024-11-14 20:04 ./slackware64/CHECKSUMS.md5.asc
--rw-r--r--  1 root root    441694 2024-11-14 20:03 ./slackware64/FILE_LIST
--rw-r--r--  1 root root   4824121 2024-11-14 20:03 ./slackware64/MANIFEST.bz2
+drwxr-xr-x 17 root root      4096 2024-11-15 21:39 ./slackware64
+-rw-r--r--  1 root root    356677 2024-11-15 21:39 ./slackware64/CHECKSUMS.md5
+-rw-r--r--  1 root root       195 2024-11-15 21:39 ./slackware64/CHECKSUMS.md5.asc
+-rw-r--r--  1 root root    441698 2024-11-15 21:38 ./slackware64/FILE_LIST
+-rw-r--r--  1 root root   4836819 2024-11-15 21:38 ./slackware64/MANIFEST.bz2
 lrwxrwxrwx  1 root root        15 2009-08-23 23:34 ./slackware64/PACKAGES.TXT -> ../PACKAGES.TXT
 drwxr-xr-x  2 root root     32768 2024-11-14 20:03 ./slackware64/a
 -rw-r--r--  1 root root       327 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txt
@@ -1055,7 +1055,7 @@ drwxr-xr-x  2 root root     32768 2024-11-14 20:03 ./slackware64/a
 -rw-r--r--  1 root root       540 2024-01-15 21:54 ./slackware64/a/zoo-2.10_28-x86_64-1.txt
 -rw-r--r--  1 root root     55448 2024-01-15 21:54 ./slackware64/a/zoo-2.10_28-x86_64-1.txz
 -rw-r--r--  1 root root       163 2024-01-15 21:54 ./slackware64/a/zoo-2.10_28-x86_64-1.txz.asc
-drwxr-xr-x  2 root root     20480 2024-11-14 20:03 ./slackware64/ap
+drwxr-xr-x  2 root root     20480 2024-11-15 21:38 ./slackware64/ap
 -rw-r--r--  1 root root       291 2024-03-14 19:01 ./slackware64/ap/a2ps-4.15.6-x86_64-1.txt
 -rw-r--r--  1 root root    675492 2024-03-14 19:01 ./slackware64/ap/a2ps-4.15.6-x86_64-1.txz
 -rw-r--r--  1 root root       195 2024-03-14 19:01 ./slackware64/ap/a2ps-4.15.6-x86_64-1.txz.asc
@@ -1307,9 +1307,9 @@ drwxr-xr-x  2 root root     20480 2024-11-14 20:03 ./slackware64/ap
 -rw-r--r--  1 root root       375 2021-02-13 11:46 ./slackware64/ap/vbetool-1.2.2-x86_64-4.txt
 -rw-r--r--  1 root root     14756 2021-02-13 11:46 ./slackware64/ap/vbetool-1.2.2-x86_64-4.txz
 -rw-r--r--  1 root root       163 2021-02-13 11:46 ./slackware64/ap/vbetool-1.2.2-x86_64-4.txz.asc
--rw-r--r--  1 root root       407 2024-10-29 19:13 ./slackware64/ap/vim-9.1.0821-x86_64-1.txt
--rw-r--r--  1 root root   9073320 2024-10-29 19:13 ./slackware64/ap/vim-9.1.0821-x86_64-1.txz
--rw-r--r--  1 root root       195 2024-10-29 19:13 ./slackware64/ap/vim-9.1.0821-x86_64-1.txz.asc
+-rw-r--r--  1 root root       407 2024-11-15 21:22 ./slackware64/ap/vim-9.1.0867-x86_64-1.txt
+-rw-r--r--  1 root root   9095500 2024-11-15 21:22 ./slackware64/ap/vim-9.1.0867-x86_64-1.txz
+-rw-r--r--  1 root root       195 2024-11-15 21:22 ./slackware64/ap/vim-9.1.0867-x86_64-1.txz.asc
 -rw-r--r--  1 root root       604 2023-03-05 21:21 ./slackware64/ap/vorbis-tools-1.4.2-x86_64-4.txt
 -rw-r--r--  1 root root    178980 2023-03-05 21:21 ./slackware64/ap/vorbis-tools-1.4.2-x86_64-4.txz
 -rw-r--r--  1 root root       163 2023-03-05 21:21 ./slackware64/ap/vorbis-tools-1.4.2-x86_64-4.txz.asc
@@ -2780,7 +2780,7 @@ drwxr-xr-x  2 root root     86016 2024-11-14 20:03 ./slackware64/kde
 -rw-r--r-- 1 root root       517 2024-02-15 21:47 ./slackware64/kde/zanshin-23.08.5-x86_64-1.txt
 -rw-r--r-- 1 root root    686104 2024-02-15 21:47 ./slackware64/kde/zanshin-23.08.5-x86_64-1.txz
 -rw-r--r-- 1 root root       163 2024-02-15 21:47 ./slackware64/kde/zanshin-23.08.5-x86_64-1.txz.asc
-drwxr-xr-x 2 root root    102400 2024-11-13 20:25 ./slackware64/l
+drwxr-xr-x 2 root root    102400 2024-11-15 21:38 ./slackware64/l
 -rw-r--r-- 1 root root       329 2022-03-06 20:00 ./slackware64/l/GConf-3.2.6-x86_64-8.txt
 -rw-r--r-- 1 root root    928144 2022-03-06 20:00 ./slackware64/l/GConf-3.2.6-x86_64-8.txz
 -rw-r--r-- 1 root root       163 2022-03-06 20:00 ./slackware64/l/GConf-3.2.6-x86_64-8.txz.asc
@@ -2850,9 +2850,9 @@ drwxr-xr-x 2 root root    102400 2024-11-13 20:25 ./slackware64/l
 -rw-r--r-- 1 root root       402 2024-08-12 20:45 ./slackware64/l/alsa-plugins-1.2.12-x86_64-2.txt
 -rw-r--r-- 1 root root     69212 2024-08-12 20:45 ./slackware64/l/alsa-plugins-1.2.12-x86_64-2.txz
 -rw-r--r-- 1 root root       195 2024-08-12 20:45 ./slackware64/l/alsa-plugins-1.2.12-x86_64-2.txz.asc
--rw-r--r-- 1 root root       343 2024-08-31 17:43 ./slackware64/l/aom-3.10.0-x86_64-1.txt
--rw-r--r-- 1 root root   2743960 2024-08-31 17:43 ./slackware64/l/aom-3.10.0-x86_64-1.txz
--rw-r--r-- 1 root root       195 2024-08-31 17:43 ./slackware64/l/aom-3.10.0-x86_64-1.txz.asc
+-rw-r--r-- 1 root root       343 2024-11-15 19:14 ./slackware64/l/aom-3.11.0-x86_64-1.txt
+-rw-r--r-- 1 root root   2741088 2024-11-15 19:14 ./slackware64/l/aom-3.11.0-x86_64-1.txz
+-rw-r--r-- 1 root root       195 2024-11-15 19:14 ./slackware64/l/aom-3.11.0-x86_64-1.txz.asc
 -rw-r--r-- 1 root root       275 2024-08-26 16:49 ./slackware64/l/apr-1.7.5-x86_64-1.txt
 -rw-r--r-- 1 root root    268240 2024-08-26 16:49 ./slackware64/l/apr-1.7.5-x86_64-1.txz
 -rw-r--r-- 1 root root       195 2024-08-26 16:49 ./slackware64/l/apr-1.7.5-x86_64-1.txz.asc
@@ -3443,9 +3443,9 @@ drwxr-xr-x 2 root root    102400 2024-11-13 20:25 ./slackware64/l
 -rw-r--r-- 1 root root       378 2023-07-03 18:31 ./slackware64/l/libnss_nis-3.2-x86_64-1.txt
 -rw-r--r-- 1 root root     29380 2023-07-03 18:31 ./slackware64/l/libnss_nis-3.2-x86_64-1.txz
 -rw-r--r-- 1 root root       163 2023-07-03 18:31 ./slackware64/l/libnss_nis-3.2-x86_64-1.txz.asc
--rw-r--r-- 1 root root       462 2024-10-31 18:12 ./slackware64/l/libnvme-1.11-x86_64-1.txt
--rw-r--r-- 1 root root    271168 2024-10-31 18:12 ./slackware64/l/libnvme-1.11-x86_64-1.txz
--rw-r--r-- 1 root root       195 2024-10-31 18:12 ./slackware64/l/libnvme-1.11-x86_64-1.txz.asc
+-rw-r--r-- 1 root root       462 2024-11-15 19:16 ./slackware64/l/libnvme-1.11.1-x86_64-1.txt
+-rw-r--r-- 1 root root    271308 2024-11-15 19:16 ./slackware64/l/libnvme-1.11.1-x86_64-1.txz
+-rw-r--r-- 1 root root       195 2024-11-15 19:16 ./slackware64/l/libnvme-1.11.1-x86_64-1.txz.asc
 -rw-r--r-- 1 root root       315 2021-02-13 07:08 ./slackware64/l/libodfgen-0.1.8-x86_64-3.txt
 -rw-r--r-- 1 root root    349788 2021-02-13 07:08 ./slackware64/l/libodfgen-0.1.8-x86_64-3.txz
 -rw-r--r-- 1 root root       163 2021-02-13 07:08 ./slackware64/l/libodfgen-0.1.8-x86_64-3.txz.asc
@@ -5528,7 +5528,7 @@ drwxr-xr-x 2 root root     65536 2024-11-14 20:03 ./slackware64/x
 -rw-r--r--   1 root root       213 2024-10-13 18:29 ./slackware64/x/xwud-1.0.7-x86_64-1.txt
 -rw-r--r--   1 root root     26124 2024-10-13 18:29 ./slackware64/x/xwud-1.0.7-x86_64-1.txz
 -rw-r--r--   1 root root       195 2024-10-13 18:29 ./slackware64/x/xwud-1.0.7-x86_64-1.txz.asc
-drwxr-xr-x   2 root root     16384 2024-11-12 20:30 ./slackware64/xap
+drwxr-xr-x   2 root root     16384 2024-11-15 21:38 ./slackware64/xap
 -rw-r--r--   1 root root       625 2024-08-12 23:22 ./slackware64/xap/MPlayer-20240812-x86_64-1.txt
 -rw-r--r--   1 root root   2722348 2024-08-12 23:22 ./slackware64/xap/MPlayer-20240812-x86_64-1.txz
 -rw-r--r--   1 root root       195 2024-08-12 23:22 ./slackware64/xap/MPlayer-20240812-x86_64-1.txz.asc
@@ -5645,9 +5645,9 @@ drwxr-xr-x   2 root root     16384 2024-11-12 20:30 ./slackware64/xap
 -rw-r--r--   1 root root   1358104 2024-08-12 23:23 ./slackware64/xap/ssr-0.4.4-x86_64-3.txz
 -rw-r--r--   1 root root       195 2024-08-12 23:23 ./slackware64/xap/ssr-0.4.4-x86_64-3.txz.asc
 -rw-r--r--   1 root root       684 2024-05-31 18:46 ./slackware64/xap/tagfile
--rw-r--r--   1 root root       527 2024-10-29 19:13 ./slackware64/xap/vim-gvim-9.1.0821-x86_64-1.txt
--rw-r--r--   1 root root   1812796 2024-10-29 19:13 ./slackware64/xap/vim-gvim-9.1.0821-x86_64-1.txz
--rw-r--r--   1 root root       195 2024-10-29 19:13 ./slackware64/xap/vim-gvim-9.1.0821-x86_64-1.txz.asc
+-rw-r--r--   1 root root       527 2024-11-15 21:22 ./slackware64/xap/vim-gvim-9.1.0867-x86_64-1.txt
+-rw-r--r--   1 root root   1814988 2024-11-15 21:22 ./slackware64/xap/vim-gvim-9.1.0867-x86_64-1.txz
+-rw-r--r--   1 root root       195 2024-11-15 21:22 ./slackware64/xap/vim-gvim-9.1.0867-x86_64-1.txz.asc
 -rw-r--r--   1 root root       455 2023-12-05 23:07 ./slackware64/xap/windowmaker-0.96.0-x86_64-2.txt
 -rw-r--r--   1 root root   1782724 2023-12-05 23:07 ./slackware64/xap/windowmaker-0.96.0-x86_64-2.txz
 -rw-r--r--   1 root root       163 2023-12-05 23:07 ./slackware64/xap/windowmaker-0.96.0-x86_64-2.txz.asc
@@ -5798,11 +5798,11 @@ drwxr-xr-x   2 root root      4096 2024-11-10 20:41 ./slackware64/y
 -rw-r--r--   1 root root   1488844 2024-05-05 17:22 ./slackware64/y/nethack-3.6.7-x86_64-2.txz
 -rw-r--r--   1 root root       195 2024-05-05 17:22 ./slackware64/y/nethack-3.6.7-x86_64-2.txz.asc
 -rw-r--r--   1 root root        26 2020-12-30 21:55 ./slackware64/y/tagfile
-drwxr-xr-x  18 root root      4096 2024-11-14 20:04 ./source
--rw-r--r--   1 root root    626071 2024-11-14 20:04 ./source/CHECKSUMS.md5
--rw-r--r--   1 root root       195 2024-11-14 20:04 ./source/CHECKSUMS.md5.asc
--rw-r--r--   1 root root    876543 2024-11-14 20:04 ./source/FILE_LIST
--rw-r--r--   1 root root  30665854 2024-11-14 20:04 ./source/MANIFEST.bz2
+drwxr-xr-x  18 root root      4096 2024-11-15 21:39 ./source
+-rw-r--r--   1 root root    626073 2024-11-15 21:39 ./source/CHECKSUMS.md5
+-rw-r--r--   1 root root       195 2024-11-15 21:39 ./source/CHECKSUMS.md5.asc
+-rw-r--r--   1 root root    876545 2024-11-15 21:39 ./source/FILE_LIST
+-rw-r--r--   1 root root  30663117 2024-11-15 21:39 ./source/MANIFEST.bz2
 -rw-r--r--   1 root root       828 2022-02-02 04:43 ./source/README.TXT
 drwxr-xr-x 125 root root      4096 2024-11-08 17:37 ./source/a
 -rw-r--r--   1 root root       339 2023-09-28 19:06 ./source/a/FTBFSlog
@@ -6514,7 +6514,7 @@ drwxr-xr-x   2 root root      4096 2024-11-08 18:52 ./source/a/mkinitrd
 -rw-r--r--   1 root root       121 2024-09-26 21:31 ./source/a/mkinitrd/busybox-1.37.0.tar.bz2.sig
 -rw-r--r--   1 root root     30200 2024-10-05 20:43 ./source/a/mkinitrd/busybox-dot-config
 -rw-r--r--   1 root root       373 2024-07-24 19:01 ./source/a/mkinitrd/doinst.sh
--rw-r--r--   1 root root      2948 2024-11-08 18:53 ./source/a/mkinitrd/geninitrd
+-rw-r--r--   1 root root      2774 2024-11-15 19:19 ./source/a/mkinitrd/geninitrd
 -rw-r--r--   1 root root      1196 2024-11-06 23:18 ./source/a/mkinitrd/geninitrd.default
 -rw-r--r--   1 root root     12735 2022-04-26 19:12 ./source/a/mkinitrd/init
 -rw-r--r--   1 root root     29903 2009-12-18 05:10 ./source/a/mkinitrd/keymaps.tar.gz
@@ -7576,14 +7576,14 @@ drwxr-xr-x   2 root root      4096 2021-02-13 05:31 ./source/ap/vbetool
 -rw-r--r--   1 root root     24915 2015-12-20 20:37 ./source/ap/vbetool/vbetool-1.2.2.tar.gz
 -rwxr-xr-x   1 root root      3202 2021-02-13 05:31 ./source/ap/vbetool/vbetool.SlackBuild
 -rw-r--r--   1 root root       129 2008-11-24 18:23 ./source/ap/vbetool/vbetool.info
-drwxr-xr-x   2 root root      4096 2024-10-29 19:12 ./source/ap/vim
+drwxr-xr-x   2 root root      4096 2024-11-15 21:21 ./source/ap/vim
 -rw-r--r--   1 root root    299348 2009-07-09 22:03 ./source/ap/vim/ctags-5.8.tar.xz
 -rw-r--r--   1 root root      2768 2022-02-12 08:11 ./source/ap/vim/ctags.use-conventional-unused-marker.patch.gz
 -rw-r--r--   1 root root       505 2022-09-26 18:00 ./source/ap/vim/doinst.sh.gz
 -rw-r--r--   1 root root      8249 2006-01-19 17:01 ./source/ap/vim/gvim.png
 -rw-r--r--   1 root root       858 2023-08-07 19:00 ./source/ap/vim/slack-desc.vim
 -rw-r--r--   1 root root       983 2023-08-07 19:01 ./source/ap/vim/slack-desc.vim-gvim
--rw-r--r--   1 root root  11734148 2024-10-29 19:11 ./source/ap/vim/vim-9.1.0821.tar.lz
+-rw-r--r--   1 root root  11767863 2024-11-15 21:21 ./source/ap/vim/vim-9.1.0867.tar.lz
 -rwxr-xr-x   1 root root      6295 2024-08-29 19:19 ./source/ap/vim/vim-gvim.SlackBuild
 -rwxr-xr-x   1 root root      7686 2024-08-29 19:19 ./source/ap/vim/vim.SlackBuild
 -rw-r--r--   1 root root        76 2022-12-08 18:30 ./source/ap/vim/vim.url
@@ -8138,7 +8138,7 @@ drwxr-xr-x   2 root root      4096 2024-09-05 16:54 ./source/installer/sources/n
 -rw-r--r--   1 root root   1672076 2024-09-05 09:42 ./source/installer/sources/nano/nano-8.2.tar.xz
 -rw-r--r--   1 root root       833 2024-09-05 09:42 ./source/installer/sources/nano/nano-8.2.tar.xz.sig
 drwxr-xr-x   6 root root      4096 2024-11-14 17:59 ./source/k
--rwxr-xr-x   1 root root      9850 2024-11-08 19:23 ./source/k/build-all-kernels.sh
+-rwxr-xr-x   1 root root      9852 2024-11-15 21:15 ./source/k/build-all-kernels.sh
 drwxr-xr-x   2 root root      4096 2024-11-07 22:42 ./source/k/doinst.sh
 -rw-r--r--   1 root root        59 2024-11-07 04:19 ./source/k/doinst.sh/doinst.sh-kernel
 drwxr-xr-x   2 root root      4096 2024-11-14 18:04 ./source/k/kernel-configs
@@ -10234,10 +10234,10 @@ drwxr-xr-x   2 root root      4096 2024-08-12 20:23 ./source/l/alsa-plugins
 -rw-r--r--   1 root root    323496 2024-06-10 09:22 ./source/l/alsa-plugins/alsa-plugins-1.2.12.tar.lz
 -rwxr--r--   1 root root      3543 2024-08-12 20:23 ./source/l/alsa-plugins/alsa-plugins.SlackBuild
 -rw-r--r--   1 root root       894 2018-02-27 06:12 ./source/l/alsa-plugins/slack-desc
-drwxr-xr-x   2 root root      4096 2024-10-10 17:43 ./source/l/aom
--rw-r--r--   1 root root   3744791 2024-08-27 11:17 ./source/l/aom/aom-3.10.0.tar.lz
+drwxr-xr-x   2 root root      4096 2024-11-15 19:13 ./source/l/aom
+-rw-r--r--   1 root root   3761069 2024-11-09 08:22 ./source/l/aom/aom-3.11.0.tar.lz
 -rwxr-xr-x   1 root root      4003 2024-10-10 17:40 ./source/l/aom/aom.SlackBuild
--rwxr-xr-x   1 root root      1994 2024-08-31 17:41 ./source/l/aom/fetch-aom.sh
+-rwxr-xr-x   1 root root      1994 2024-11-15 19:10 ./source/l/aom/fetch-aom.sh
 -rw-r--r--   1 root root       794 2024-04-03 19:11 ./source/l/aom/slack-desc
 drwxr-xr-x   2 root root      4096 2024-08-26 16:49 ./source/l/apr
 drwxr-xr-x   2 root root      4096 2023-02-01 21:28 ./source/l/apr-util
@@ -11309,8 +11309,8 @@ drwxr-xr-x   2 root root      4096 2023-07-03 18:31 ./source/l/libnss_nis
 -rwxr-xr-x   1 root root      4656 2023-07-03 18:31 ./source/l/libnss_nis/libnss_nis.SlackBuild
 -rw-r--r--   1 root root        38 2020-08-16 19:23 ./source/l/libnss_nis/libnss_nis.url
 -rw-r--r--   1 root root       836 2020-08-16 19:26 ./source/l/libnss_nis/slack-desc
-drwxr-xr-x   2 root root      4096 2024-10-31 18:11 ./source/l/libnvme
--rw-r--r--   1 root root    464686 2024-10-31 09:06 ./source/l/libnvme/libnvme-1.11.tar.lz
+drwxr-xr-x   2 root root      4096 2024-11-15 19:16 ./source/l/libnvme
+-rw-r--r--   1 root root    464696 2024-11-15 15:21 ./source/l/libnvme/libnvme-1.11.1.tar.lz
 -rwxr-xr-x   1 root root      3572 2024-08-05 00:10 ./source/l/libnvme/libnvme.SlackBuild
 -rw-r--r--   1 root root        38 2024-01-31 20:18 ./source/l/libnvme/libnvme.url
 -rw-r--r--   1 root root       949 2024-01-31 20:21 ./source/l/libnvme/slack-desc
@@ -14641,7 +14641,7 @@ drwxr-xr-x   2 root root       4096 2024-07-29 17:57 ./source/x/x11/configure
 -rw-r--r--   1 root root        380 2022-05-21 04:33 ./source/x/x11/configure/libxcvt
 -rw-r--r--   1 root root        428 2024-03-25 19:07 ./source/x/x11/configure/libxshmfence
 -rw-r--r--   1 root root        380 2020-05-18 17:50 ./source/x/x11/configure/meson
--rw-r--r--   1 root root        650 2024-01-04 20:24 ./source/x/x11/configure/pixman
+-rw-r--r--   1 root root        670 2024-11-15 21:33 ./source/x/x11/configure/pixman
 -rw-r--r--   1 root root        380 2020-05-18 17:50 ./source/x/x11/configure/rendercheck
 -rw-r--r--   1 root root        298 2024-03-25 19:07 ./source/x/x11/configure/setxkbmap
 -rw-r--r--   1 root root        437 2024-03-20 03:03 ./source/x/x11/configure/xcb-proto
