@@ -24,7 +24,7 @@
 PKGNAM=aom
 
 # Pull a stable branch + patches
-BRANCH=${1:-3.10.0}
+BRANCH=${1:-3.11.0}
 
 # Clear download area:
 rm -rf ${PKGNAM}
