@@ -1,7 +1,7 @@
 # Don't use icecream:
 PATH=$(echo $PATH | sed "s|/usr/libexec/icecc/bin||g" | tr -s : | sed "s/^://g" | sed "s/:$//g")
 
-if [ "$ARCH" = "x86_64" ]; then
+if [ "$ARCH" = "x86_64" -o "$ARCH" = "i686" ]; then
   do_sse2=enabled
 else
   do_sse2=disabled
