@@ -1,3 +1,9 @@
+Fri Nov 15 21:35:55 UTC 2024
+ap/vim-9.1.0867-x86_64-1.txz:  Upgraded.
+l/aom-3.11.0-x86_64-1.txz:  Upgraded.
+l/libnvme-1.11.1-x86_64-1.txz:  Upgraded.
+xap/vim-gvim-9.1.0867-x86_64-1.txz:  Upgraded.
++--------------------------+
 Thu Nov 14 20:00:55 UTC 2024
 a/kernel-firmware-20241113_6e4e94b-noarch-1.txz:  Upgraded.
 a/kernel-generic-6.11.8-x86_64-1.txz:  Upgraded.
